# research-companion

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
src/ingestion/: chunker.py  pdf_loader.py
src/llm/: generator.py  model_loader.py
src/retrieval/: hybrid.py  pipeline.py  reranker.py  result.py  retriever.py  router.py
tests/: test_config.py
